[build-system]
build-backend = 'setuptools.build_meta'
requires = ["setuptools>=61",
            "setuptools_scm[toml]>=6.2",
            "wheel",
            "numpy==1.25.1"]

[project]
name = "radbelt"
description = "Astropy-friendly wrapper for the AE-8/AP-8 Van Allen belt model"
readme = "README.md"
authors = [ { name = "Leo Singer", email = "leo.p.singer@nasa.gov" } ]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved",
    "Operating System :: MacOS",
    "Operating System :: POSIX",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Unix",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Astronomy"
]
license = { text = "NOSA" }
requires-python = ">=3.9"
dependencies = ["astropy", "numpy>=1.19"]
dynamic = [ "version" ]

[project.urls]
source = "https://github.com/nasa/radbelt"

[project.optional-dependencies]
test = ["pytest-doctestplus"]

[tool.setuptools.packages]
find = {}

[tool.setuptools.package-data]
"radbelt.extern.igrf" = ["*.dat"]
"radbelt.extern.aep8" = ["*.asc"]

[tool.setuptools_scm]
write_to = "radbelt/_version.py"

[tool.cibuildwheel]
test-extras = ["test"]
test-command = "pytest --pyargs radbelt --doctest-plus"
